More notebook updates for 1.4.0

--- a/qFlat_index_pdf_search/pdf_qFlat_Search.ipynb
+++ b/qFlat_index_pdf_search/pdf_qFlat_Search.ipynb
@@ -95,7 +95,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 49,
       "id": "rjfp-08NPdvC",
       "metadata": {
         "id": "rjfp-08NPdvC"
@@ -133,7 +133,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 50,
       "id": "f23f6513",
       "metadata": {
         "colab": {
@@ -146,14 +146,14 @@
       "source": [
         "### !!! Only run this cell if you need to download the data into your environment, for example in Colab\n",
         "### This downloads research paper pdf into your environment\n",
-        "if os.path.exists(\"./data/research_paper\") == False:\n",
+        "if os.path.exists(\"./data/research_paper.pdf\") == False:\n",
         "  !mkdir ./data\n",
         "  !wget -P ./data https://raw.githubusercontent.com/KxSystems/kdbai-samples/main/document_search/data/research_paper.pdf"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 51,
       "id": "yCCdm-QDPtDZ",
       "metadata": {
         "colab": {
@@ -174,7 +174,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 52,
       "id": "HCI37LxrPywl",
       "metadata": {
         "id": "HCI37LxrPywl"
@@ -209,7 +209,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 53,
       "id": "b870117b",
       "metadata": {
         "id": "b870117b"
@@ -231,7 +231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 54,
       "id": "9a135635",
       "metadata": {
         "id": "9a135635"
@@ -269,7 +269,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 55,
       "id": "NWa3S2iwQd_K",
       "metadata": {
         "id": "NWa3S2iwQd_K"
@@ -311,7 +311,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 56,
       "id": "401f8162",
       "metadata": {
         "id": "401f8162"
@@ -362,7 +362,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 58,
       "id": "f48fc536",
       "metadata": {
         "id": "f48fc536"
@@ -390,7 +390,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 59,
       "id": "eArvp20fSDc6",
       "metadata": {
         "id": "eArvp20fSDc6"
@@ -428,7 +428,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 60,
       "id": "6e670f9e",
       "metadata": {
         "id": "6e670f9e"
@@ -447,7 +447,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 61,
       "id": "e1d190db-7c19-418e-9140-3dff04c9d4c0",
       "metadata": {
         "id": "e1d190db-7c19-418e-9140-3dff04c9d4c0"
@@ -497,7 +497,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 63,
       "id": "He42izi1Soee",
       "metadata": {
         "id": "He42izi1Soee"
@@ -555,7 +555,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 65,
       "id": "u_IlkIcuTn3e",
       "metadata": {
         "id": "u_IlkIcuTn3e"
@@ -595,7 +595,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 66,
       "id": "b24c1179",
       "metadata": {
         "id": "b24c1179"
@@ -676,7 +676,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 22,
       "id": "e7486a9c",
       "metadata": {
         "id": "e7486a9c"
@@ -746,7 +746,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 25,
       "id": "d74b6f20",
       "metadata": {
         "colab": {
