update LlamaParse sample for 1.4

--- a/LlamaParse_pdf_RAG/llamaParse_demo.ipynb
+++ b/LlamaParse_pdf_RAG/llamaParse_demo.ipynb
@@ -83,6 +83,7 @@
         "from llama_index.vector_stores.kdbai import KDBAIVectorStore\n",
         "from llama_index.postprocessor.cohere_rerank import CohereRerank\n",
         "from getpass import getpass\n",
+        "import os\n",
         "import kdbai_client as kdbai\n"
       ]
     },
@@ -109,26 +110,45 @@
       "source": [
         "# llama-parse is async-first, running the async code in a notebook requires the use of nest_asyncio\n",
         "import nest_asyncio\n",
-        "nest_asyncio.apply()\n",
-        "\n",
-        "import os\n",
-        "\n",
+        "nest_asyncio.apply()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "# API access to llama-cloud\n",
-        "KDBAI_API_KEY = (\n",
+        "os.environ[\"LLAMA_CLOUD_API_KEY\"] = (\n",
         "    os.environ[\"LLAMA_CLOUD_API_KEY\"]\n",
         "    if \"LLAMA_CLOUD_API_KEY\" in os.environ\n",
         "    else getpass(\"LLAMA CLOUD API key: \")\n",
-        ")\n",
-        "\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "# Using OpenAI API for embeddings/llms\n",
-        "KDBAI_API_KEY = (\n",
+        "os.environ[\"OPENAI_API_KEY\"] = (\n",
         "    os.environ[\"OPENAI_API_KEY\"]\n",
         "    if \"OPENAI_API_KEY\" in os.environ\n",
-        "    else getpass(\"OPENAI API key: \")\n",
-        ")\n",
-        "\n",
+        "    else getpass(\"OpenAI API Key: \")\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "# Using Cohere for reranking\n",
-        "KDBAI_API_KEY = (\n",
+        "os.environ[\"COHERE_API_KEY\"] = (\n",
         "    os.environ[\"COHERE_API_KEY\"]\n",
         "    if \"COHERE_API_KEY\" in os.environ\n",
         "    else getpass(\"COHERE API key: \")\n",
