Add note about HF_TOKEN

--- a/HuggingFace_search/huggingface_inference.ipynb
+++ b/HuggingFace_search/huggingface_inference.ipynb
@@ -47,7 +47,11 @@
         "\n",
         "By following this approach, you can build a system that searches through hundreds of AI tools without the need to deploy any infrastructure (and scale to millions!). Additionally, since you embed the dataset locally, you can use Hugging Face's free plan without requiring a credit card or worrying about hitting rate limits, at least until you are ready for production.\n",
         "\n",
-        "In this tutorial, we will walk through the process of embedding a dataset of AI tools using Sentence Transformers, and then using Hugging Face's Inference API to embed queries at inference time, enabling efficient and scalable search capabilities."
+        "In this tutorial, we will walk through the process of embedding a dataset of AI tools using Sentence Transformers, and then using Hugging Face's Inference API to embed queries at inference time, enabling efficient and scalable search capabilities.\n",
+        "\n",
+        "You will need a Hugging Face api token for this sample. Please create a Hugging Face account by going to [Hugging Face – The AI community building the future](https://huggingface.co/) and create a token by going to https://huggingface.co/settings/tokens\n",
+        "\n",
+        "You can then enter this token below or set it to HF_TOKEN in your environment."
       ]
     },
     {
@@ -1377,7 +1381,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
