updates to 1.4 samples

--- a/HuggingFace_search/huggingface_inference.ipynb
+++ b/HuggingFace_search/huggingface_inference.ipynb
@@ -1117,7 +1117,9 @@
       },
       "source": [
         "## Embed the Query with the Hugging Face Inference API\n",
-        "Use the Hugging Face Inference API to embed the query so that it can be used to search our index"
+        "Use the Hugging Face Inference API to embed the query so that it can be used to search our index\n",
+        "\n",
+        "!! Note that you might need to run this cell a few times as it takes a few seconds for the model to be ready."
       ]
     },
     {
