--- a/TSS_transformed/Transformed_TSS_pattern_matching.ipynb
+++ b/TSS_transformed/Transformed_TSS_pattern_matching.ipynb
@@ -853,7 +853,7 @@
       },
       "outputs": [],
       "source": [
-        "# Create the table called \"metadata_demo\"\n",
+        "# Create the table called \"sensors\"\n",
         "table = database.create_table(\"sensors\",\n",
         "                              schema = sensor_schema,\n",
         "                              indexes = indexes,\n",
