--- a/multimodal_RAG_unified_text/multi_modal_demo.ipynb
+++ b/multimodal_RAG_unified_text/multi_modal_demo.ipynb
@@ -755,7 +755,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create the table called \"metadata_demo\"\n",
+    "# Create the table called \"multi_modal_demo\"\n",
     "table = database.create_table(\"multi_modal_demo\", schema=table_schema, indexes=indexes)"
    ]
   },
