--- a/LlamaIndex_samples/Sub_Question_Query_Engine_LlamaIndex_KDBAI.ipynb
+++ b/LlamaIndex_samples/Sub_Question_Query_Engine_LlamaIndex_KDBAI.ipynb
@@ -581,7 +581,7 @@
       },
       "outputs": [],
       "source": [
-        "OPENAI_API_KEY = (\n",
+        "os.environ[\"OPENAI_API_KEY\"] = (\n",
         "    os.environ[\"OPENAI_API_KEY\"]\n",
         "    if \"OPENAI_API_KEY\" in os.environ\n",
         "    else getpass(\"OpenAI API key: \")\n",
