--- a/LlamaIndex_samples/Multimodal_RAG_LLamaIndex_CLIP_KDBAI.ipynb
+++ b/LlamaIndex_samples/Multimodal_RAG_LLamaIndex_CLIP_KDBAI.ipynb
@@ -1038,7 +1038,7 @@
       },
       "outputs": [],
       "source": [
-        "OPENAI_API_KEY = (\n",
+        "os.environ[\"OPENAI_API_KEY\"] = (\n",
         "    os.environ[\"OPENAI_API_KEY\"]\n",
         "    if \"OPENAI_API_KEY\" in os.environ\n",
         "    else getpass(\"OpenAI API key: \")\n",
