--- a/TSS_non_transformed/Temporal_Similarity_Search_KDB+.ipynb
+++ b/TSS_non_transformed/Temporal_Similarity_Search_KDB+.ipynb
@@ -100,7 +100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you're interested in how this synthetic dataset was created you can see the code in createHDB.q. Also if you'd prefer to run this sample using qAPI instead of Python API "
+    "If you're interested in how this synthetic dataset was created you can see the code in createHDB.q. Also if you'd prefer to run this sample using qAPI instead of Python API the q version of the notebook linked [here](https://code.kx.com/kdbai/latest/integrations/kdb.html#drop-table)."
    ]
   },
   {
