--- a/LlamaIndex_advanced_RAG/KDBAI_Advanced_RAG_Demo.ipynb
+++ b/LlamaIndex_advanced_RAG/KDBAI_Advanced_RAG_Demo.ipynb
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "f7d29b82-c1b8-4880-869e-dabc8bdedaa4",
    "metadata": {
     "colab": {
@@ -758,7 +758,7 @@
     "                vector_store_kwargs={\n",
     "                        \"index\" : \"flat_index\",\n",
     "                        \"filter\" : [[\"<\", \"publication_date\", datetime.date(2008,9,15)]],\n",
-    "                        \"sort_columns\" : \"publication_date\"\n",
+    "                        \"sort_columns\" : [\"publication_date\"]\n",
     "                        }\n",
     "        )"
    ]
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "37753e54-959b-43a3-b596-7cef0e94d4ba",
    "metadata": {
     "colab": {
@@ -885,7 +885,7 @@
     "                vector_store_kwargs={\n",
     "                        \"index\" : \"flat_index\",\n",
     "                        \"filter\" : [[\">=\", \"publication_date\", datetime.date(2008,9,15)]],\n",
-    "                        \"sort_columns\" : \"publication_date\"\n",
+    "                        \"sort_columns\" : [\"publication_date\"]\n",
     "                        }\n",
     "        )"
    ]
@@ -968,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "67c2240b-7b0d-4bd8-8c19-fcf7e5ba429c",
    "metadata": {
     "colab": {
@@ -997,7 +997,7 @@
     "                similarity_top_k=K,\n",
     "                vector_store_kwargs={\n",
     "                        \"index\" : \"flat_index\",\n",
-    "                        \"sort_columns\" : \"publication_date\"\n",
+    "                        \"sort_columns\" : [\"publication_date\"]\n",
     "                        }\n",
     "        )"
    ]
