update multi-index data dir

--- a/multi_index_multimodal_search/multi_index_multimodal_search.ipynb
+++ b/multi_index_multimodal_search/multi_index_multimodal_search.ipynb
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -274,7 +274,7 @@
     "    return df\n",
     "\n",
     "# Example usage\n",
-    "data_dir = \"/content/data\"\n",
+    "data_dir = \"./data\"\n",
     "result_df = process_images_and_descriptions(data_dir)\n",
     "\n",
     "# Display the first few rows of the DataFrame\n",
