update LangChain samples

--- a/retrieval_augmented_generation/retrieval_augmented_generation_evaluation.ipynb
+++ b/retrieval_augmented_generation/retrieval_augmented_generation_evaluation.ipynb
@@ -62,7 +62,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install kdbai_client langchain langchain_openai langchain-community"
+    "!pip install kdbai_client langchain langchain_openai #langchain-community\n",
+    "\n",
+    "import os\n",
+    "!git clone -b KDBAI_v1.4 https://github.com/KxSystems/langchain.git\n",
+    "os.chdir('langchain/libs/community')\n",
+    "!pip install ."
    ]
   },
   {
