--- a/unstructured_io_RAG/Table_RAG_Unstructured_KDBAI_LangChain_RAG.ipynb
+++ b/unstructured_io_RAG/Table_RAG_Unstructured_KDBAI_LangChain_RAG.ipynb
@@ -57,13 +57,18 @@
         "%pip install kdbai_client\n",
         "%pip install langchain-openai\n",
         "%pip install langchain\n",
-        "%pip install langchain-community\n",
+        "#%pip install langchain-community\n",
+        "import os\n",
+        "!git clone -b KDBAI_v1.4 https://github.com/KxSystems/langchain.git\n",
+        "#!cd langchain/libs/community\n",
+        "os.chdir('langchain/libs/community')\n",
+        "!pip install .\n",
         "%pip install --upgrade nltk"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -71,28 +76,7 @@
         "id": "60Fu7hWzPiHR",
         "outputId": "294a4e05-226a-4f06-983a-e8f9f4744832"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/tmp/ipykernel_2093335/1443383392.py:3: DeprecationWarning: unstructured.ingest will be removed in a future version. Functionality moved to the unstructured-ingest project.\n",
-            "  from unstructured.embed.openai import OpenAIEmbeddingConfig, OpenAIEmbeddingEncoder\n",
-            "[nltk_data] Downloading package punkt to /home/gflood/nltk_data...\n",
-            "[nltk_data]   Package punkt is already up-to-date!\n"
-          ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "execution_count": 2,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "from unstructured.partition.pdf import partition_pdf\n",
         "from unstructured.partition.auto import partition\n",
@@ -200,25 +184,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
-      "metadata": {
-        "id": "x5S2-y-XoXUE"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "mkdir: cannot create directory ‘./tables’: File exists\n"
-          ]
-        }
-      ],
-      "source": [
-        "!mkdir './tables'"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 7,
       "metadata": {
         "id": "v1zHd-TiPkgM"
@@ -228,8 +193,6 @@
         "elements = partition_pdf('./doc1.pdf',\n",
         "                              strategy=\"hi_res\",\n",
         "                              chunking_strategy=\"by_title\",\n",
-        "                              max_characters=2500,\n",
-        "                              new_after_n_chars=2300,\n",
         "                              )"
       ]
     },
@@ -1344,20 +1307,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "jT-WnkjYUN4u"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "WARNING:root:You are running a development version of `kdbai_client`.\n",
-            "Compatibility with the KDB.AI server is not guaranteed.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#connect to KDB.AI\n",
         "session = kdbai.Session(api_key=KDBAI_API_KEY, endpoint=KDBAI_ENDPOINT)"
