--- a/retrieval_augmented_generation/retrieval_augmented_generation.ipynb
+++ b/retrieval_augmented_generation/retrieval_augmented_generation.ipynb
@@ -71,7 +71,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install kdbai_client langchain langchain_openai langchain-community langchain-huggingface"
+    "!pip install kdbai_client langchain langchain_openai langchain-huggingface #langchain-community \n",
+    "\n",
+    "import os\n",
+    "!git clone -b KDBAI_v1.4 https://github.com/KxSystems/langchain.git\n",
+    "os.chdir('langchain/libs/community')\n",
+    "!pip install ."
    ]
   },
   {
