updates hf notebook to wait for model

--- a/HuggingFace_search/huggingface_inference.ipynb
+++ b/HuggingFace_search/huggingface_inference.ipynb
@@ -1124,7 +1124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "id": "4a31f878",
       "metadata": {
         "id": "4a31f878"
@@ -1140,7 +1140,7 @@
         "def generate_query_embedding(text: str) -> list[float]:\n",
         "    response = requests.post(\n",
         "        embedding_url,\n",
-        "        headers={\"Authorization\": f\"Bearer {HF_TOKEN}\"},\n",
+        "        headers={\"Authorization\": f\"Bearer {HF_TOKEN}\", \"x-wait-for-model\": \"true\"},        \n",
         "        json={\"inputs\": text}\n",
         "    )\n",
         "\n",
