--- a/HuggingFace_search/huggingface_inference.ipynb
+++ b/HuggingFace_search/huggingface_inference.ipynb
@@ -1012,7 +1012,7 @@
     "import requests\n",
     "\n",
     "# make sure your URL looks like this to ensure you get instant results, and not a model loading error\n",
-    "embedding_url = \"https://api-inference.huggingface.co/pipeline/feature-extraction/BAAI/bge-small-en-v1.5\"\n",
+    "embedding_url = \"https://router.huggingface.co/hf-inference/models/BAAI/bge-small-en-v1.5/pipeline/feature-extraction\"\n",
     "\n",
     "def generate_query_embedding(text: str) -> list[float]:\n",
     "    response = requests.post(\n",
