--- a/music_recommendation/music_recommendation.ipynb
+++ b/music_recommendation/music_recommendation.ipynb
@@ -52,6 +52,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c00e5abb",
+   "metadata": {},
+   "source": [
+    "### Upgrading NumPy\n",
+    "Upgrades NumPy to a specific version (1.26.4) to ensure compatibility with other dependencies, particularly relevant after installing multiple packages."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34f7379b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install numpy==1.26.4 --upgrade"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b478d96",
+   "metadata": {},
+   "source": [
+    "After this step you currently need to restart your runtime!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "4bcb2fc4",
