--- a/video_RAG/video_RAG_TwelveLabs.ipynb
+++ b/video_RAG/video_RAG_TwelveLabs.ipynb
@@ -68,7 +68,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install kdbai-client pytubefix twelvelabs moviepy"
+        "!pip install kdbai-client pytubefix twelvelabs moviepy==2.1.2"
       ]
     },
     {
