update music rec sample

--- a/music_recommendation/music_recommendation.ipynb
+++ b/music_recommendation/music_recommendation.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "b91bc28a",
    "metadata": {},
    "outputs": [
@@ -149,6 +149,7 @@
     "# embedding categorical data\n",
     "import nltk\n",
     "nltk.download('punkt_tab')\n",
+    "nltk.download('punkt')\n",
     "from nltk.tokenize import word_tokenize\n",
     "from gensim.models import Word2Vec"
    ]
