update document search

--- a/document_search/document_search.ipynb
+++ b/document_search/document_search.ipynb
@@ -97,7 +97,7 @@
    "source": [
     "### !!! Only run this cell if you need to download the data into your environment, for example in Colab\n",
     "### This downloads research paper pdf into your environment\n",
-    "!mkdir ./data\n",
+    "!mkdir -pv ./data\n",
     "!wget -P ./data https://raw.githubusercontent.com/KxSystems/kdbai-samples/main/document_search/data/research_paper.pdf"
    ]
   },
