--- a/video_RAG/video_RAG_TwelveLabs.ipynb
+++ b/video_RAG/video_RAG_TwelveLabs.ipynb
@@ -9,7 +9,7 @@
       "source": [
         "# Multimodal RAG with Video Data using KDB.AI and TwelveLabs\n",
         "\n",
-        "##### Note: This example requires a KDB.AI endpoint/API key and Twelve Labs API key. Sign up for free accounts if needed.\n",
+        "##### Note: This example requires KDB.AI Server and Twelve Labs API key. Sign up for a free KDB.AI Server trial [here](https://trykdb.kx.com/kdbaiserver/signup/) and Twelve Labs account if needed.\n",
         "\n",
         "TwelveLabs is a company that deals with multimodal models, with a specific focus on video. We can use them to generate multimodal embeddings, and to chat with sections of our video that are retrieved. Here we will be making a multimodal RAG pipeline using KDB.AI and TwelveLabs.\n",
         "\n",
@@ -268,7 +268,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "id": "a1ee7bc6",
       "metadata": {
         "colab": {
@@ -277,15 +277,7 @@
         "id": "a1ee7bc6",
         "outputId": "986dee25-0b18-4b21-98f6-c004f2508ce6"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "KDB.AI Session initialized for endpoint: https://cloud.kdb.ai/instance/bbdfv0a29f\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Initialize KDB.AI Session and Database connection\n",
         "session = Session(endpoint=os.getenv(\"KDBAI_ENDPOINT\"), api_key=os.getenv(\"KDBAI_API_KEY\"))\n",
