--- a/document_search/document_search.ipynb
+++ b/document_search/document_search.ipynb
@@ -9,9 +9,7 @@
    "source": [
     "# Semantic Search on PDF Documents\n",
     "\n",
-    "##### Note: This example requires a KDB.AI endpoint and API key. Sign up for a free [KDB.AI account](https://kdb.ai/get-started).\n",
-    "\n",
-    "This example demonstrates how to use KDB.AI to run semantic search on unstructured text documents.\n",
+    "This example shows how to use KDB.AI to run semantic search on unstructured text documents.\n",
     "\n",
     "Semantic search allows users to perform searches based on the meaning or similarity of the data rather than exact matches. It works by converting the query into a vector representation and then finding similar vectors in the database. This way, even if the query and the data in the database are not identical, the system can identify and retrieve the most relevant results based on their semantic meaning.\n",
     "\n",
@@ -792,74 +790,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70505eae-4138-4ba8-80e9-fc13c37d0b32",
-   "metadata": {
-    "id": "70505eae-4138-4ba8-80e9-fc13c37d0b32"
-   },
+   "id": "257f049c",
+   "metadata": {},
    "source": [
     "With the embeddings created, we need to store them in a vector database to enable efficient searching.\n",
     "\n",
-    "### Define KDB.AI Session\n",
-    "\n",
-    "KDB.AI comes in two offerings:\n",
-    "\n",
-    "1. [KDB.AI Cloud](https://trykdb.kx.com/kdbai/signup/) - For experimenting with smaller generative AI projects with a vector database in our cloud.\n",
-    "2. [KDB.AI Server](https://trykdb.kx.com/kdbaiserver/signup/) - For evaluating large scale generative AI applications on-premises or on your own cloud provider.\n",
-    "\n",
-    "Depending on which you use there will be different setup steps and connection details required.\n",
-    "\n",
-    "##### Option 1. KDB.AI Cloud\n",
-    "\n",
-    "To use KDB.AI Cloud, you will need two session details - a URL endpoint and an API key.\n",
-    "To get these you can sign up for free [here](https://trykdb.kx.com/kdbai/signup).\n",
-    "\n",
-    "You can connect to a KDB.AI Cloud session using `kdbai.Session` and passing the session URL endpoint and API key details from your KDB.AI Cloud portal.\n",
-    "\n",
-    "If the environment variables `KDBAI_ENDPOINTS` and `KDBAI_API_KEY` exist on your system containing your KDB.AI Cloud portal details, these variables will automatically be used to connect.\n",
-    "If these do not exist, it will prompt you to enter your KDB.AI Cloud portal session URL endpoint and API key details."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "401f8162",
-   "metadata": {
-    "id": "401f8162"
-   },
-   "outputs": [],
-   "source": [
-    "KDBAI_ENDPOINT = (\n",
-    "    os.environ[\"KDBAI_ENDPOINT\"]\n",
-    "    if \"KDBAI_ENDPOINT\" in os.environ\n",
-    "    else input(\"KDB.AI endpoint: \")\n",
-    ")\n",
-    "KDBAI_API_KEY = (\n",
-    "    os.environ[\"KDBAI_API_KEY\"]\n",
-    "    if \"KDBAI_API_KEY\" in os.environ\n",
-    "    else getpass(\"KDB.AI API key: \")\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3b3a4932",
-   "metadata": {
-    "id": "3b3a4932"
-   },
-   "outputs": [],
-   "source": [
-    "session = kdbai.Session(api_key=KDBAI_API_KEY, endpoint=KDBAI_ENDPOINT)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b53a7384",
-   "metadata": {
-    "id": "b53a7384"
-   },
-   "source": [
-    "##### Option 2. KDB.AI Server\n",
+    "### Connect to KDB.AI Server\n",
     "\n",
     "To use KDB.AI Server, you will need download and run your own container.\n",
     "To do this, you will first need to sign up for free [here](https://trykdb.kx.com/kdbaiserver/signup/).\n",
@@ -873,13 +809,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f48fc536",
+   "id": "3b3a4932",
    "metadata": {
-    "id": "f48fc536"
+    "id": "3b3a4932"
    },
    "outputs": [],
    "source": [
-    "# session = kdbai.Session(endpoint=\"http://localhost:8082\")"
+    "session = kdbai.Session(endpoint=\"http://localhost:8082\")"
    ]
   },
   {
