--- a/video_RAG/video_RAG_TwelveLabs.ipynb
+++ b/video_RAG/video_RAG_TwelveLabs.ipynb
@@ -108,9 +108,7 @@
       },
       "source": [
         "### Set Up API Keys and KDB.AI Connection Details\n",
-        "Now we need to set up our API keys for the various services we'll be using.\n",
-        "For each key, we'll first check if it's already set as an environment variable.\n",
-        "If not, we'll prompt the user to enter it securely."
+        "We only have one key to set up, our TwelveLabs API Key."
       ]
     },
     {
@@ -132,16 +130,6 @@
         "os.environ[\"TWELVE_LABS_API_KEY\"] = (\n",
         "    os.getenv(\"TWELVE_LABS_API_KEY\")\n",
         "    or getpass.getpass(\"TWELVE_LABS_API_KEY: \")\n",
-        ")\n",
-        "\n",
-        "os.environ[\"KDBAI_API_KEY\"] = (\n",
-        "    os.getenv(\"KDBAI_API_KEY\")\n",
-        "    or getpass.getpass(\"KDB.AI API Key: \")\n",
-        ")\n",
-        "\n",
-        "os.environ[\"KDBAI_ENDPOINT\"] = (\n",
-        "    os.getenv(\"KDBAI_ENDPOINT\")\n",
-        "    or input(\"KDB.AI Endpoint URL: \")\n",
         ")"
       ]
     },
@@ -262,8 +250,15 @@
         "id": "377f2c0b"
       },
       "source": [
-        "### Connect to KDB.AI session and Database\n",
-        "Let's initialize our KDB.AI session to connect to our default database."
+        "### Connect to KDB.AI Server\n",
+        "\n",
+        "To get started with KDB.AI Server:\n",
+        "\n",
+        "1. Sign up for a free trial at https://trykdb.kx.com/kdbaiserver/signup/\n",
+        "2. Follow the setup instructions in your welcome email\n",
+        "3. Connect using the endpoint for your deployment\n",
+        "\n",
+        "Example connection:"
       ]
     },
     {
@@ -279,8 +274,7 @@
       },
       "outputs": [],
       "source": [
-        "# Initialize KDB.AI Session and Database connection\n",
-        "session = Session(endpoint=os.getenv(\"KDBAI_ENDPOINT\"), api_key=os.getenv(\"KDBAI_API_KEY\"))\n",
+        "session = Session(endpoint=\"http://localhost:8082\")\n",
         "db = session.database(\"default\")\n",
         "print(f\"KDB.AI Session initialized for endpoint: {os.getenv('KDBAI_ENDPOINT')}\")"
       ]
